major updates to bootloader and way we get data from pod